# CrispASR

./: .gitignore  CLAUDE.md  CMakeLists.txt  HISTORY.md  LEARNINGS.md  PERFORMANCE.md  PLAN.md  README.md  RELEASE_NOTES_v0.6.11.md  RELEASE_NOTES_v0.8.1.md  RELEASE_NOTES_v0.8.2.md  build-wasm.sh  build-xcframework.sh
.github/workflows/: bindings-go.yml  build.yml  ci.yml  deploy-hf-space.yml  kaggle-status.yml  lint.yml  regression.yml  release.yml
bindings/go/: crispasr_session.go  whisper.go
bindings/javascript/: emscripten.cpp  package.json
bindings/ruby/ext/: dependencies.rb  extconf.rb
cmake/: Findc2pa.cmake
crisp_audio/src/: audio_tower.cpp
crisp_lid/src/: lid_cld3.cpp
crispasr-sys/: build.rs
docs/: architecture.md  cli.md  contributing.md  diff-harness-coverage.md  feature-matrix.html  feature-matrix.md  performance.md  testing.md  tts.md
examples/: CMakeLists.txt
examples/addon.node/: addon.cpp
examples/cli/: CMakeLists.txt  cli.cpp  crispasr_backend.cpp  crispasr_backend_canary.cpp  crispasr_backend_cohere.cpp  crispasr_backend_cosyvoice3.cpp  crispasr_backend_f5_tts.cpp  crispasr_backend_gemma4_e2b.cpp  crispasr_backend_glm_asr.cpp  crispasr_backend_granite.cpp  crispasr_backend_granite_nle.cpp  crispasr_backend_kokoro.cpp  crispasr_backend_lfm2_audio.cpp  crispasr_backend_melotts.cpp  crispasr_backend_mimo_asr.cpp  crispasr_backend_moss_audio.cpp  crispasr_backend_omnivoice.cpp  crispasr_backend_parakeet.cpp  crispasr_backend_pocket_tts.cpp  crispasr_backend_qwen3.cpp  crispasr_backend_qwen3_tts.cpp  crispasr_backend_tada.cpp  crispasr_backend_vibevoice.cpp  crispasr_backend_voxcpm2_tts.cpp  crispasr_backend_voxtral4b.cpp  crispasr_c2pa.h  crispasr_chunk_context_gate.h  crispasr_diarize_cli.cpp  crispasr_diarize_cli.h  crispasr_diff_main.cpp  crispasr_llm_pipeline.h  crispasr_run.cpp  crispasr_server.cpp  crispasr_speaker_cluster.cpp  crispasr_speaker_cluster.h  crispasr_speaker_embedder.cpp  crispasr_speaker_embedder.h  crispasr_tts_chunking.cpp  crispasr_tts_disclaimer.h  crispasr_watermark_dispatch.h  (+1 more)
examples/crispasr-quantize/: main.cpp
examples/quantize/: CMakeLists.txt
examples/server/: CMakeLists.txt  server.cpp
examples/stream/: stream.cpp
examples/vibevoice-test-stages/: main.cpp
flutter/crispasr/: pubspec.yaml
flutter/crispasr/test/: bindings_smoke_test.dart
ggml/src/ggml-metal/: ggml-metal-context.m  ggml-metal-device.m  ggml-metal-ops.cpp  ggml-metal.metal
handover-prompts/: dia-speecht5-tts-port.md  session-2026-06-08-zonos-moonshine.md
hf-space/: Dockerfile  app.py
hf_readmes/: bark-small-GGUF.md  chatterbox-GGUF.md  f5-tts-GGUF.md  fastpitch-en-GGUF.md  kartoffel-orpheus-3b-german-natural-GGUF.md  kartoffel-orpheus-3b-german-synthetic-GGUF.md  orpheus-3b-0.1-ft-GGUF.md  piper-voices-GGUF.md  qwen3-tts-0.6b-base-GGUF.md  snac-24khz-GGUF.md  truecaser-de.md  voxcpm2-GGUF.md
include/: crispasr.h
models/: convert-chatterbox-to-gguf.py  convert-dots-tts-to-gguf.py  convert-mini-omni2-to-gguf.py  convert-parler-to-gguf.py  convert-tada-ref-to-gguf.py  convert-tada-to-gguf.py  convert-voxcpm2-to-gguf.py  hf-readme-cosyvoice3-0.5b-2512-GGUF.md
python/crispasr/: _binding.py
scripts/: bump-version.sh  generate-c2pa-cert.sh
src/: CMakeLists.txt  bark_tts.cpp  bert_encoder.cpp  canary.cpp  chatterbox.cpp  chatterbox.h  chatterbox_s3gen.cpp  chatterbox_s3gen.h  chatterbox_s3tok.cpp  cohere.cpp  cosyvoice3_tts.cpp  cosyvoice3_tts.h  crispasr.cpp  crispasr_audio.cpp  crispasr_c_api.cpp  crispasr_cache.cpp  crispasr_diarize.cpp  crispasr_diarize.h  crispasr_model_registry.cpp  crispasr_vad.cpp  dia_tts.cpp  dots_tts.cpp  f5_tts.cpp  firered_vad.cpp  funasr.cpp  gemma4_e2b.cpp  gemma4_e2b.h  granite_speech.cpp  indextts.cpp  kokoro.cpp  kokoro.h  kugelaudio.cpp  lfm2_audio.cpp  melotts.cpp  melotts.h  mimo_asr.cpp  mini_omni2.cpp  moonshine_streaming.cpp  moonshine_streaming.h  moss_audio.cpp  (+25 more)
src/core/: attention.h  g2p_de.h  g2p_en.h  gguf_loader.cpp  lstm.h  mel.cpp  mel.h
src/omnivoice/: audio-io.h  audio-postproc-stream.h  audio-postproc.h  backend.h  bpe.h  dac-decoder.h  dac-encoder.h  debug.h  duration-estimator.h  gguf-weights.h  hubert-enc.h  lang-map.h  maskgit-tts.h  omnivoice-llm.h  omnivoice.cpp  omnivoice.h  ov-error.h  philox.h  pipeline-codec.cpp  pipeline-codec.h  pipeline-tts.cpp  pipeline-tts.h  prompt-tts.h  qwen3-enc.h  rvq-codec.h  semantic-enc.h  srt.h  text-chunker-stream.h  text-chunker.h  version.h  voice-design.h
tests/: CMakeLists.txt  benchmark_asr.py  benchmark_metrics.py  env-live-tests.sh  run-benchmark.sh  test-bench-enabled.cpp  test-chatterbox-params.cpp  test-core-mel-parallel.cpp  test-diarize-pyannote-live.cpp  test-espeak-phonemize.cpp  test-g2p-de.cpp  test-g2p-en.cpp  test-issue-114-chunk-context-gate.cpp  test-kokoro-params.cpp  test-params.cpp  test-piper-roundtrip.sh  test-progress-output.sh  test-server-stream-resilience.sh  test-server-translate.sh  test-server-tts.sh  test-speaker-cluster.cpp  test-vad-full.cpp  test-vad-thresholds.cpp  test_backend_caps.py  test_benchmark_metrics.py  test_moss_audio_live.cpp  test_nemotron_live.cpp  test_server_chunking.cpp  test_watermark.cpp
tests/regression/: README.md  manifest.json  run_one.py  test_driver_smoke.py
tools/: analyze_longform.py  audit_diff_coverage.py  cmake_graphviz_targets.py  compare_probe_dumps.py  dump_reference.py  extend_chatterbox_ref_si_stages.py  format.sh  gen_chatterbox_text_token_ref.py  kaggle-benchmark-all-backends.py  longform_vps.sh  runpod-kugelaudio-diff.sh  sync_go_cgo_ldflags.py  test-all-backends.py  test-cosyvoice3-lm-smoke.cpp
tools/kaggle/beam-size-fix-verify/: beam-size-fix-verify.py  kaggle_harness.py  kernel-metadata.json
tools/reference_backends/: chatterbox.py  chatterbox_turbo.py  cosyvoice3_tts.py  kugelaudio.py  mini_omni2.py  nemotron.py  orpheus_talker.py  tada_encoder.py  tada_tts.py  voxcpm2_tts.py
tools/upstream-prs/: 08-metal-norm-cross-simdgroup.md  08-metal-norm-cross-simdgroup.patch  10-metal-sched-buffer-reuse-drift.md  20-col2im-1d-new-op.md  README.md
(+39 files in other folders)
